[package]
name = "axum-range"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "HTTP Range responses for axum"
homepage = "https://github.com/haileys/axum-range"
repository = "https://github.com/haileys/axum-range"
documentation = "https://docs.rs/axum-range"

[features]
run_server_in_example = []
# default = ["mime"]
# mime = ["mime_guess"]

[dependencies]
axum = { version = "0.8", default-features = false }
axum-extra = { version = "0.10", features = ["typed-header"] }
async-stream = "0.3.6"
bytes = "1.5"
futures = { version = "0.3", default-features = false, features = ["std"] }
http-body = "1.0"
mime_guess = { version = "2.0.5", optional = false }
multer = "3.1.0"
pin-project = "1.1"
tokio = { version = "1.3", features = ["fs", "io-util"] }
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.12.18", features = ["json", "stream", "multipart"] }
futures-util = "0.3.31"

[dev-dependencies]
assert_matches = "1.5"
axum = { version = "0", features = ["macros"] }
hyper = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.19"
